# barrett

./: Cargo.toml  README.md
examples/: engine_with_historic_candles.rs  engine_with_live_trades.rs  multi_stream_multi_exchange.rs
src/: lib.rs  main.rs
src/bot/: bot_demo.rs  bot_dynamic_demo.rs  mod.rs
src/examples/: engine_with_historic_candles.rs  engine_with_live_trades.rs
src/proto/: mk_data.proto
tests/: integration.rs
